--- a/Product Sales Analysis/Product_Sales_Analysis.ipynb
+++ b/Product Sales Analysis/Product_Sales_Analysis.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -181,68 +181,105 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>user_id</th>\n",
        "      <th>item_id</th>\n",
+       "      <th>user_id</th>\n",
        "      <th>rating</th>\n",
        "      <th>timestamp</th>\n",
+       "      <th>model_attr</th>\n",
        "      <th>category</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>year</th>\n",
+       "      <th>user_attr</th>\n",
+       "      <th>split</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1292949</th>\n",
-       "      <td>1157628</td>\n",
        "      <td>9478</td>\n",
+       "      <td>1157628</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2018-09-26</td>\n",
+       "      <td>Female</td>\n",
        "      <td>Headphones</td>\n",
+       "      <td>Etre Jeune</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1292950</th>\n",
-       "      <td>1157629</td>\n",
        "      <td>9435</td>\n",
+       "      <td>1157629</td>\n",
        "      <td>5.0</td>\n",
        "      <td>2018-09-26</td>\n",
+       "      <td>Female</td>\n",
        "      <td>Computers &amp; Accessories</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1292951</th>\n",
-       "      <td>1157630</td>\n",
        "      <td>9305</td>\n",
+       "      <td>1157630</td>\n",
        "      <td>3.0</td>\n",
        "      <td>2018-09-26</td>\n",
+       "      <td>Female</td>\n",
        "      <td>Computers &amp; Accessories</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1292952</th>\n",
-       "      <td>1157631</td>\n",
        "      <td>9303</td>\n",
+       "      <td>1157631</td>\n",
        "      <td>5.0</td>\n",
        "      <td>2018-09-29</td>\n",
+       "      <td>Male</td>\n",
        "      <td>Headphones</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1292953</th>\n",
-       "      <td>1157632</td>\n",
        "      <td>9478</td>\n",
+       "      <td>1157632</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2018-10-01</td>\n",
+       "      <td>Female</td>\n",
        "      <td>Headphones</td>\n",
+       "      <td>Etre Jeune</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         user_id  item_id  rating   timestamp                 category\n",
-       "1292949  1157628     9478     1.0  2018-09-26               Headphones\n",
-       "1292950  1157629     9435     5.0  2018-09-26  Computers & Accessories\n",
-       "1292951  1157630     9305     3.0  2018-09-26  Computers & Accessories\n",
-       "1292952  1157631     9303     5.0  2018-09-29               Headphones\n",
-       "1292953  1157632     9478     1.0  2018-10-01               Headphones"
+       "         item_id  user_id  rating   timestamp model_attr  \\\n",
+       "1292949     9478  1157628     1.0  2018-09-26     Female   \n",
+       "1292950     9435  1157629     5.0  2018-09-26     Female   \n",
+       "1292951     9305  1157630     3.0  2018-09-26     Female   \n",
+       "1292952     9303  1157631     5.0  2018-09-29       Male   \n",
+       "1292953     9478  1157632     1.0  2018-10-01     Female   \n",
+       "\n",
+       "                        category       brand  year user_attr  split  \n",
+       "1292949               Headphones  Etre Jeune  2017       NaN      0  \n",
+       "1292950  Computers & Accessories         NaN  2017       NaN      0  \n",
+       "1292951  Computers & Accessories         NaN  2016       NaN      0  \n",
+       "1292952               Headphones         NaN  2018       NaN      0  \n",
+       "1292953               Headphones  Etre Jeune  2017    Female      0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,16 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1292954, 5)"
+       "(1292954, 10)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -286,16 +323,21 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1292954 entries, 0 to 1292953\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column     Non-Null Count    Dtype  \n",
-      "---  ------     --------------    -----  \n",
-      " 0   user_id    1292954 non-null  int64  \n",
-      " 1   item_id    1292954 non-null  int64  \n",
-      " 2   rating     1292954 non-null  float64\n",
-      " 3   timestamp  1292954 non-null  object \n",
-      " 4   category   1292954 non-null  object \n",
-      "dtypes: float64(1), int64(2), object(2)\n",
-      "memory usage: 49.3+ MB\n"
+      "Data columns (total 10 columns):\n",
+      " #   Column      Non-Null Count    Dtype  \n",
+      "---  ------      --------------    -----  \n",
+      " 0   item_id     1292954 non-null  int64  \n",
+      " 1   user_id     1292954 non-null  int64  \n",
+      " 2   rating      1292954 non-null  float64\n",
+      " 3   timestamp   1292954 non-null  object \n",
+      " 4   model_attr  1292954 non-null  object \n",
+      " 5   category    1292954 non-null  object \n",
+      " 6   brand       331120 non-null   object \n",
+      " 7   year        1292954 non-null  int64  \n",
+      " 8   user_attr   174124 non-null   object \n",
+      " 9   split       1292954 non-null  int64  \n",
+      "dtypes: float64(1), int64(4), object(5)\n",
+      "memory usage: 98.6+ MB\n"
      ]
     }
    ],
@@ -308,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +370,7 @@
        "Name: timestamp, Length: 1292954, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +576,7 @@
        "max    5.000000e+00  2.018000e+03  2.000000e+00"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,9 +646,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ratings' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# drop all duplicate values in rating category\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43mratings\u001b[49m\u001b[38;5;241m.\u001b[39mdropna(inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      5\u001b[0m ratings\u001b[38;5;241m.\u001b[39mdrop_duplicates(inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ratings' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# drop all duplicate values in rating category\n",
     "\n",
@@ -617,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,7 +1322,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1282,14 +1336,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.9"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "05b71705b04c77cad66c5cedfdd779190a105974319382f7eac1b92ec6a4f5bf"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
